--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
-html,
-body {
-    height: 100%;
-}
+   html, body {
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+            font-family: Arial, sans-serif;
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* Prevent scrollbars */
+        }
+        
+        canvas {
+            display: block;
+            image-rendering: pixelated;
+            image-rendering: -moz-crisp-edges;
+            image-rendering: crisp-edges;
+        }
 
-body {
-    padding: 0;
-    margin: 0;
-    background: black
-}
-
-canvas {
-    padding: 0;
-    margin: 0 auto;
-    background: black;
-
-}
+        .loading {
+            color: white;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+        }
